// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PlanRunsList Component should match snapshot while loading 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="px-4 mt-2 mb-4"
  >
    <div
      class="mb-2"
    >
      <h2
        class="text-xl font-semibold text-[#e2e8f0]"
      >
        Plan Runs
      </h2>
    </div>
    <div
      data-testid="loading"
    >
      Loading...
    </div>
  </div>
</div>
`;

exports[`PlanRunsList Component should match snapshot with empty runs 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="px-4 mt-2 mb-4"
  >
    <div
      class="mb-2"
    >
      <h2
        class="text-xl font-semibold text-[#e2e8f0]"
      >
        Plan Runs
      </h2>
    </div>
    <div
      class="bg-[#12151f] rounded-sm border border-[rgba(148,163,184,0.1)] p-8 text-center"
    >
      <p
        class="text-[#64748b]"
      >
        No plan runs yet. Generate jobs from a production plan to create a run.
      </p>
    </div>
  </div>
</div>
`;

exports[`PlanRunsList Component should match snapshot with runs 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="px-4 mt-2 mb-4"
  >
    <div
      class="mb-2"
    >
      <h2
        class="text-xl font-semibold text-[#e2e8f0]"
      >
        Plan Runs
      </h2>
    </div>
    <div
      class="overflow-x-auto rounded-sm border border-[rgba(148,163,184,0.1)]"
    >
      <div
        class="relative w-full overflow-auto"
      >
        <table
          class="w-full caption-bottom text-sm"
        >
          <thead
            class="[&_tr]:border-b [&_tr]:border-[var(--color-border-active)]"
          >
            <tr
              class="border-b border-[var(--color-border-dim)] transition-colors hover:bg-[rgba(0,212,255,0.04)] data-[state=selected]:bg-muted bg-[#0f1219]"
            >
              <th
                class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                Product
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                Plan
              </th>
              <th
                class="h-10 px-2 align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right"
              >
                Qty
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                Status
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                Jobs
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                Created
              </th>
              <th
                class="h-10 px-2 align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
              >
                Actions
              </th>
            </tr>
          </thead>
          <tbody
            class="[&_tr:last-child]:border-0"
          >
            <tr
              class="border-b border-[var(--color-border-dim)] transition-colors data-[state=selected]:bg-muted bg-[#12151f] hover:bg-[#1a1d2e]"
            >
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-[#e2e8f0] text-sm"
              >
                Rifter
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-[#cbd5e1] text-sm"
              >
                Rifter Plan
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-[#cbd5e1] text-sm"
              >
                10
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                <div
                  class="inline-flex items-center rounded-sm px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border hover:border-[var(--color-border-active)] capitalize cursor-default bg-[rgba(245,158,11,0.1)] border-[rgba(245,158,11,0.3)] text-[#f59e0b]"
                >
                  In Progress
                </div>
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-[#94a3b8] text-[13px]"
              >
                1/5 done, 2 active
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-[#94a3b8] text-[13px]"
              >
                2/22/2026
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
              >
                <button
                  class="p-1 rounded hover:bg-[rgba(239,68,68,0.1)] text-[#ef4444]"
                  title="Cancel planned jobs"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-circle-x h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="m15 9-6 6"
                    />
                    <path
                      d="m9 9 6 6"
                    />
                  </svg>
                </button>
              </td>
            </tr>
            <tr
              class="border-b border-[var(--color-border-dim)] transition-colors data-[state=selected]:bg-muted bg-[#0f1219] hover:bg-[#1a1d2e]"
            >
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-[#e2e8f0] text-sm"
              >
                Slasher
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-[#cbd5e1] text-sm"
              >
                Slasher Plan
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-[#cbd5e1] text-sm"
              >
                3
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                <div
                  class="inline-flex items-center rounded-sm px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border hover:border-[var(--color-border-active)] capitalize cursor-default bg-[rgba(148,163,184,0.1)] border-[rgba(148,163,184,0.3)] text-[#94a3b8]"
                >
                  Completed
                </div>
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-[#94a3b8] text-[13px]"
              >
                3/3 done
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-[#94a3b8] text-[13px]"
              >
                2/22/2026
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
